crates/reinhardt-pages/tests/ui/page/fail/accessibility_validation.stderr
error: Element <input> requires an accessible label.
       Provide a wrapping label, a label with matching `for`/`id`, or use `aria_label`/`aria_labelledby`.
  --> tests/ui/page/fail/accessibility_validation.rs:21:3
   |
21 |         input {
   |         ^^^^^

error: Element <input> requires an accessible label.
       Provide a wrapping label, a label with matching `for`/`id`, or use `aria_label`/`aria_labelledby`.
  --> tests/ui/page/fail/accessibility_validation.rs:29:4
   |
29 |             input {
   |             ^^^^^

error: Element <input> requires an accessible label.
       Provide a wrapping label, a label with matching `for`/`id`, or use `aria_label`/`aria_labelledby`.
  --> tests/ui/page/fail/accessibility_validation.rs:40:3
   |
40 |         input {
   |         ^^^^^

error: Element <input> requires an accessible label.
       Provide a wrapping label, a label with matching `for`/`id`, or use `aria_label`/`aria_labelledby`.
  --> tests/ui/page/fail/accessibility_validation.rs:54:3
   |
54 |         input {
   |         ^^^^^

error: Element <button> requires an accessible name.
       Either provide text content, an img child with non-empty alt text, or use 'aria_label'/'aria_labelledby'.

       Examples:
       Correct:   button { "Click me" }
       Correct:   button { aria_label: "Close" }
       Correct:   button { span { "Submit" } }
       Incorrect: button { }
  --> tests/ui/page/fail/accessibility_validation.rs:62:3
   |
62 |         button {}
   |         ^^^^^^

error: Element <a> requires an accessible name.
       Either provide text content, an img child with non-empty alt text, or use 'aria_label'/'aria_labelledby'.

       Examples:
       Correct:   a { "Click me" }
       Correct:   a { aria_label: "Close" }
       Correct:   a { span { "Submit" } }
       Incorrect: a { }
  --> tests/ui/page/fail/accessibility_validation.rs:66:3
   |
66 |         a { href: "/missing-name" }
   |         ^

error: Invalid ARIA role value `made-up-role`
  --> tests/ui/page/fail/accessibility_validation.rs:71:4
   |
71 |             role: "made-up-role",
   |             ^^^^

error: Attribute `tabindex` only allows static values `0` and `-1`; positive values hijack keyboard tab order
  --> tests/ui/page/fail/accessibility_validation.rs:78:4
   |
78 |             tabindex: 3,
   |             ^^^^^^^^

error: Element <iframe> requires a non-empty `title` attribute for accessibility
  --> tests/ui/page/fail/accessibility_validation.rs:84:3
   |
84 |         iframe { src: "/embed" }
   |         ^^^^^^

error: `a11y` accepts only `off` as an opt-out marker: `a11y: off`
  --> tests/ui/page/fail/accessibility_validation.rs:91:10
   |
91 |             a11y: true,
   |                   ^^^^
